<resources>
    <string name="app_name">The movie</string>
    <string name="profile">profile</string>
    <string name="messages">messages</string>
    <string name="main_page">main page</string>
    <string name="all_movies">All movies</string>
    <string name="top_rated">Top rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="now_playing">Now playing</string>
    <string name="Latest">Latest</string>
    <string name="movieposter">MoviePoster</string>
    <string name="description">Описание:</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="genres">Жанры:</string>
    <string name="Rating">Рейтинг:</string>
    <string name="Votes">Голосов:</string>
    <string name="the_movie_db">The movie DB</string>
    <string name="enter_your_login">enter your login</string>
    <string name="enter_your_password">enter your password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="enter">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="title_activity_register">ActivityRegister</string>
    <string name="sign_in">Зарегистрироваться</string>
    <string name="create_login">придумайте логин</string>
    <string name="create_password">придумайте пароль</string>
    <string name="one_more_time">введите пароль еще раз</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_latest">The latest movie page</string>
    <string name="favorites">Favorites</string>
    <string name="top_credits">Актеры:</string>
    <string name="more">more</string>
    <string name="actors">Актеры:</string>
    <string name="recomendationss">С этим фильмом смотрят:</string>
</resources>
