<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    >


    <FrameLayout
        android:layout_weight="8"
        android:layout_height="0dp"
        android:layout_width="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="450dp"
            android:layout_width="match_parent"
            android:gravity="center">

            <EditText
                android:id="@+id/register_login"
                android:textSize="19sp"
                android:hint="@string/create_login"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="300dp"
                android:textColor="@color/auth_back"
                android:textColorHint="#9C9C9C"
                android:inputType="textEmailAddress"
                android:drawablePadding="10dp"
                />

            <EditText
                android:drawablePadding="10dp"
                android:textColorHint="#9C9C9C"
                android:layout_marginTop="20dp"
                android:textSize="19sp"
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/auth_back"
                android:hint="@string/create_password"
                android:id="@+id/register_password"
                android:layout_height="55dp"
                android:inputType="textPassword"/>
            <EditText
                android:drawablePadding="10dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/auth_back"
                android:textSize="19sp"
                android:layout_gravity="center_horizontal"
                android:layout_width="300dp"
                android:hint="@string/one_more_time"
                android:id="@+id/register_confirm_password"
                android:textColorHint="#9C9C9C"
                android:layout_height="55dp"
                android:inputType="textPassword"/>

        </LinearLayout>

    </FrameLayout>
    <FrameLayout
        android:layout_weight="2"
        android:layout_height="0dp"
        android:layout_width="match_parent">
        <Button
            android:id="@+id/registration_button"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:background="@drawable/login_button"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:layout_height="60dp"
            android:layout_width="180dp"
            />


    </FrameLayout>

</LinearLayout>
