<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/auth_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="36"
        >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/the_movie_db"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:gravity="center"
            >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="25"
        android:gravity="center"
        android:orientation="vertical"
        >
        <EditText
            android:hint=" "
            android:id="@+id/user_name"
            android:textSize="15sp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="300dp"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/avatar"
            />

        <EditText
            android:textColor="@color/white"
            android:layout_height="40dp"
            android:drawablePadding="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:hint=" "
            android:id="@+id/user_password"
            android:drawableLeft="@drawable/locked"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="46"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/login_button"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:background="@drawable/login_button"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:layout_height="40dp"
            android:layout_width="200dp"
            />

        <Button
            android:id="@+id/register_button"
            android:layout_height="40dp"
            android:layout_width="200dp"
            android:layout_marginTop="15dp"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/registration"
            android:background="@drawable/register_backgr"
            />

    </LinearLayout>

</LinearLayout>