<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <!--android:id="@+id/the_movie_page_name"-->
    <LinearLayout
        android:layout_height="50dp"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        >

        <FrameLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            >
            <ImageView
                android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
                android:layout_height="20dp"
                android:layout_width="20dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="TODO"/>

        </FrameLayout>
        <TextView
            android:textColor="@color/ic_colors"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:id="@+id/the_movie_page_name"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="8"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_height="180dp"
        android:layout_width="330dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:id="@+id/the_movie_page_backgr"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            >
        </ImageView>
       <LinearLayout
           android:layout_height="match_parent"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:orientation="vertical"
           >
           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="horizontal"
               >
               <TextView
                   android:layout_marginLeft="10dp"
                   android:text="Год:"
                   android:textSize="14sp"
                   android:layout_height="wrap_content"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   />
               <TextView
                   android:id="@+id/the_movie_page_release"
                   android:layout_height="wrap_content"
                   android:textSize="14sp"
                   android:layout_width="0dp"
                   android:layout_weight="1.5"
                   >

               </TextView>
           </LinearLayout>
           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="horizontal"
               >
               <TextView
                   android:layout_marginLeft="10dp"
                   android:text="@string/genres"
                   android:textSize="14sp"
                   android:layout_height="wrap_content"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   />
               <TextView
                   android:id="@+id/the_movie_page_genre"
                   android:layout_height="wrap_content"
                   android:textSize="14sp"
                   android:layout_width="0dp"
                   android:layout_weight="1.5"
                   >

               </TextView>
           </LinearLayout>
           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="horizontal"
               >
               <TextView
                   android:layout_marginLeft="10dp"
                   android:text="@string/Rating"
                   android:textSize="14sp"
                   android:layout_height="wrap_content"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   />
               <TextView
                   android:id="@+id/the_movie_page_rate"
                   android:layout_height="wrap_content"
                   android:textSize="14sp"
                   android:layout_width="0dp"
                   android:layout_weight="1.5"
                   >

               </TextView>
           </LinearLayout>
           <LinearLayout
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:orientation="horizontal"
               >
               <TextView
                   android:layout_marginLeft="10dp"
                   android:text="@string/Votes"
                   android:textSize="14sp"
                   android:layout_height="wrap_content"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   />
               <TextView
                   android:id="@+id/the_movie_page_vote_number"
                   android:layout_height="wrap_content"
                   android:textSize="14sp"
                   android:layout_width="0dp"
                   android:layout_weight="1.5"
                   >

               </TextView>
           </LinearLayout>

       </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/favorites_stroke"
        android:layout_height="38dp"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"

        >
        <FrameLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            >
            <ImageView
                android:background="@drawable/ic_star"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:contentDescription="TODO" />

        </FrameLayout>
        <TextView
            android:text="@string/add_to_favorites"
            android:textSize="15sp"
            android:textColor="#282828"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="330dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:text="@string/description"
            android:textSize="15sp"
            android:textColor="@color/ic_colors"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"

            />
        <TextView
            android:id="@+id/the_movie_page_description"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

        </TextView>
    </LinearLayout>


</LinearLayout>
</ScrollView>
